--- a/.prettierrc
+++ b/.prettierrc
@@ -1,15 +1,29 @@
 {
-  "printWidth": 80,
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "importOrder": [
+    "^next(.*)",
+    "^react(.*)",
+    "^framer-motion(.*)",
+    "^@tanstack/(.*)$",
+    "^@/lib/api/(.*)$",
+    "^@/lib/utils/(.*)$",
+    "^@/lib/contexts/(.*)$",
+    "^@/types/(.*)$",
+    "^@/hooks/(.*)$",
+    "^@/components/(.*)$",
+    "^@/pages/(.*)$",
+    "^@/styles/(.*)$",
+    "^@/public/assets/(.*)$",
+    "^[./]"
+  ],
+  "importOrderSortSpecifiers": true,
+  "printWidth": 100,
   "tabWidth": 2,
-  "useTabs": false,
   "semi": true,
   "singleQuote": false,
-  "trailingComma": "es5",
+  "jsxSingleQuote": false,
+  "trailingComma": "all",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
   "arrowParens": "always",
-  "requirePragma": false,
-  "insertPragma": false,
-  "proseWrap": "preserve",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "jsxBracketSameLine": false
 }
