--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "framer-motion": "^12.17.3",
-    "gsap": "^3.13.0",
     "next": "15.3.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "tailwind-scrollbar": "^3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
