REFACTOR: 프로젝트 상세 index 파일 추가

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,15 +4,10 @@
     "^next(.*)",
     "^react(.*)",
     "^framer-motion(.*)",
-    "^@tanstack/(.*)$",
-    "^@/lib/api/(.*)$",
-    "^@/lib/utils/(.*)$",
-    "^@/lib/contexts/(.*)$",
     "^@/types/(.*)$",
-    "^@/hooks/(.*)$",
+    "^@/constanats/(.*)$",
     "^@/components/(.*)$",
     "^@/pages/(.*)$",
-    "^@/styles/(.*)$",
     "^@/public/assets/(.*)$",
     "^[./]"
   ],
