STYLE: 프리티어 수정 및 재적용

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
     "^react(.*)",
     "^framer-motion(.*)",
     "^@/types/(.*)$",
-    "^@/constanats/(.*)$",
+    "^@/constants/(.*)$",
     "^@/components/(.*)$",
     "^@/pages/(.*)$",
     "^@/public/assets/(.*)$",
