FEAT: 방문자 수 데이터 추가 및 테마변환 변경

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.56.0",
     "framer-motion": "^12.17.3",
     "next": "15.3.3",
     "react": "^18",
